# Codex

./: .gitignore  README.md  TODO-IMPLEMENTATION.md  TODO.md  pyproject.toml
scripts/: export_reply_candidates.py  render_performance_svg.py
src/whatsapp_zip_to_docx/: __init__.py  app_launcher.py  app_model.py  app_session.py  audio_transcription.py  desktop_app.py  docx_writer.py  engine.py  google_drive.py  interactive.py  main.py  orchestrator.py  parser.py  perf.py  performance_visualization.py  profile_store.py  profiles.py  reply_analysis.py  timing_estimator.py  url_tools.py  zip_reader.py
tests/: test_low_information_urls.py  test_perf.py  test_timing_estimator.py
